--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <nav class="navigation">
       <div>
         <img
-          src="/kidz-world-html-boilerplate/assets/kw-logo.png"
+          src="/assets/kw-logo.png"
           alt=""
           style="width: 160px" class="nav-img"
         />
       </div>
       <div class="cart-logo">
         <img
-          src="/kidz-world-html-boilerplate/assets/cart-icon.png"
+          src="/assets/cart-icon.png"
           alt=""
           style="width: 40px; height: 40px"
         />
@@ -36,7 +36,7 @@
       <h2 class="hh">Discover New Books</h2>
       <div class="content">
         <div class="book-1">
-          <img src="/kidz-world-html-boilerplate/assets/book1.png" alt="" />
+          <img src="/assets/book1.png" alt="" />
           <h2>This was our pact</h2>
           <h3>Ryan Andews</h3>
           <div class="buy">
@@ -46,7 +46,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                src="/assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/kidz-world-html-boilerplate/assets/book2.png" alt="" />
+          <img src="/assets/book2.png" alt="" />
           <h2>The famous five</h2>
           <h3>Guid Blyton</h3>
           <div class="buy">
@@ -64,7 +64,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                src="/assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/kidz-world-html-boilerplate/assets/book3.png" alt="" />
+          <img src="/assets/book3.png" alt="" />
           <h2>Matlida</h2>
           <h3>Roald Dahl</h3>
           <div class="buy">
@@ -82,7 +82,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                src="/assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/kidz-world-html-boilerplate/assets/book4.png" alt="" />
+          <img src="/assets/book4.png" alt="" />
           <h2>Harry Potter</h2>
           <h3>JK Rowling</h3>
           <div class="buy">
@@ -100,7 +100,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                src="/assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/kidz-world-html-boilerplate/assets/book5.png" alt="" />
+          <img src="/assets/book5.png" alt="" />
           <h2>For Young Readers</h2>
           <h3>Ruskin Bond</h3>
           <div class="buy">
@@ -118,7 +118,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                src="/assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/kidz-world-html-boilerplate/assets/book6.png" alt="" />
+          <img src="/assets/book6.png" alt="" />
           <h2>Wimpy Kid - DIY</h2>
           <h3>Jeff kINEY</h3>
           <div class="buy">
@@ -136,7 +136,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                src="/assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -149,7 +149,7 @@
         <div class="new-games">
           <div class="game-1">
             <img
-              src="/kidz-world-html-boilerplate/assets/dart-board.png"
+              src="/assets/dart-board.png"
               alt=""
             />
             <h2>Dart Board</h2>
@@ -161,7 +161,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                  src="/assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -170,7 +170,7 @@
           </div>
           <div class="game-1">
             <img
-              src="/kidz-world-html-boilerplate/assets/connect-four.png"
+              src="/assets/connect-four.png"
               alt=""
             />
             <h2>Connect 4</h2>
@@ -182,7 +182,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                  src="/assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div class="game-1">
-            <img src="/kidz-world-html-boilerplate/assets/jenga.png" alt="" />
+            <img src="/assets/jenga.png" alt="" />
             <h2>Jenga</h2>
             <h3>Wooden blocks, 54 pieces</h3>
             <div class="buy">
@@ -200,7 +200,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                  src="/assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -209,7 +209,7 @@
           </div>
           <div class="game-1">
             <img
-              src="/kidz-world-html-boilerplate/assets/monopoly.png"
+              src="/assets/monopoly.png"
               alt=""
             />
             <h2>Monopoly</h2>
@@ -221,7 +221,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                  src="/assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -235,7 +235,7 @@
         <div class="new-games">
           <div class="game-1">
             <img
-              src="/kidz-world-html-boilerplate/assets/bookmarks.png"
+              src="/assets/bookmarks.png"
               alt=""
             />
             <h2>Bookmarks</h2>
@@ -247,7 +247,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                  src="/assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -256,7 +256,7 @@
           </div>
           <div class="game-1">
             <img
-              src="/kidz-world-html-boilerplate/assets/birthday-card.png"
+              src="/assets/birthday-card.png"
               alt=""
             />
             <h2>Birthday card</h2>
@@ -268,7 +268,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                  src="/assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -276,7 +276,7 @@
             </div>
           </div>
           <div class="game-1">
-            <img src="/kidz-world-html-boilerplate/assets/stuffed-toy.png" alt="" />
+            <img src="/assets/stuffed-toy.png" alt="" />
             <h2>Stuffed toys</h2>
             <h3>Handmade with love</h3>
             <div class="buy">
@@ -286,7 +286,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                  src="/assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -295,7 +295,7 @@
           </div>
           <div class="game-1">
             <img
-              src="/kidz-world-html-boilerplate/assets/dream-catcher.png"
+              src="/assets/dream-catcher.png"
               alt=""
             />
             <h2>Dream catcher drawing</h2>
@@ -307,7 +307,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/kidz-world-html-boilerplate/assets/cart-icon-white.png"
+                  src="/assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -320,7 +320,7 @@
     <footer>
         <div class="pic">
             <h2>Brought to you by</h2>
-            <img src="/kidz-world-html-boilerplate/assets/krishti.png" alt="">
+            <img src="/assets/krishti.png" alt="">
         </div>
         <div class="krishti">
             <h2>Krishti</h2>
