--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/cart-icon-white.png"
+                src="./assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -82,7 +82,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/cart-icon-white.png"
+                src="./assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -100,7 +100,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/cart-icon-white.png"
+                src="./assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/book5.png" alt="" />
+          <img src="./assets/book5.png" alt="" />
           <h2>For Young Readers</h2>
           <h3>Ruskin Bond</h3>
           <div class="buy">
@@ -118,7 +118,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/cart-icon-white.png"
+                src="./assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/book6.png" alt="" />
+          <img src="./assets/book6.png" alt="" />
           <h2>Wimpy Kid - DIY</h2>
           <h3>Jeff kINEY</h3>
           <div class="buy">
@@ -136,7 +136,7 @@
             <div class="add">
               <h2>Add</h2>
               <img
-                src="/cart-icon-white.png"
+                src="./assets/cart-icon-white.png"
                 alt=""
                 style="width: 20px; height: 20px"
               />
@@ -149,7 +149,7 @@
         <div class="new-games">
           <div class="game-1">
             <img
-              src="/dart-board.png"
+              src="./assets/dart-board.png"
               alt=""
             />
             <h2>Dart Board</h2>
@@ -161,7 +161,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/cart-icon-white.png"
+                  src="./assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -170,7 +170,7 @@
           </div>
           <div class="game-1">
             <img
-              src="/connect-four.png"
+              src="./assets/connect-four.png"
               alt=""
             />
             <h2>Connect 4</h2>
@@ -182,7 +182,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/cart-icon-white.png"
+                  src="./assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -190,7 +190,7 @@
             </div>
           </div>
           <div class="game-1">
-            <img src="/jenga.png" alt="" />
+            <img src="./assets/jenga.png" alt="" />
             <h2>Jenga</h2>
             <h3>Wooden blocks, 54 pieces</h3>
             <div class="buy">
@@ -200,7 +200,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/cart-icon-white.png"
+                  src="./assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -209,7 +209,7 @@
           </div>
           <div class="game-1">
             <img
-              src="/monopoly.png"
+              src="./assets/monopoly.png"
               alt=""
             />
             <h2>Monopoly</h2>
@@ -221,7 +221,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/cart-icon-white.png"
+                  src="./assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -235,7 +235,7 @@
         <div class="new-games">
           <div class="game-1">
             <img
-              src="/bookmarks.png"
+              src="./assets/bookmarks.png"
               alt=""
             />
             <h2>Bookmarks</h2>
@@ -247,7 +247,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/cart-icon-white.png"
+                  src="./assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -256,7 +256,7 @@
           </div>
           <div class="game-1">
             <img
-              src="/birthday-card.png"
+              src="./assets/birthday-card.png"
               alt=""
             />
             <h2>Birthday card</h2>
@@ -268,7 +268,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/cart-icon-white.png"
+                  src="./assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -276,7 +276,7 @@
             </div>
           </div>
           <div class="game-1"> 
-            <img src="/stuffed-toy.png" alt="" />
+            <img src="./assets/stuffed-toy.png" alt="" />
             <h2>Stuffed toys</h2>
             <h3>Handmade with love</h3>
             <div class="buy">
@@ -286,7 +286,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/cart-icon-white.png"
+                  src="./assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -295,7 +295,7 @@
           </div>
           <div class="game-1">
             <img
-              src="/dream-catcher.png"
+              src="./assets/dream-catcher.png"
               alt=""
             />
             <h2>Dream catcher drawing</h2>
@@ -307,7 +307,7 @@
               <div class="add">
                 <h2>Add</h2>
                 <img
-                  src="/cart-icon-white.png"
+                  src="./assets/cart-icon-white.png"
                   alt=""
                   style="width: 20px; height: 20px"
                 />
@@ -320,7 +320,7 @@
     <footer>
         <div class="pic">
             <h2>Brought to you by</h2>
-            <img src="/krishti.png" alt="">
+            <img src="./assets/krishti.png" alt="">
         </div>
         <div class="krishti">
             <h2>Krishti</h2>
