--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="hash">
         <h1>Shop.</h1>
-        <h1>Have Fun.</h1>
+        <h1 class="n">Have Fun.</h1>
         <h1>Repeat.</h1>
         <h4>#NewAndNow</h4>
       </div>
