--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <nav class="navigation">
       <div>
         <img
-          src="/kw-logo.png"
+          src="./kw-logo.png"
           alt=""
           style="width: 160px" class="nav-img"
         />
       </div>
       <div class="cart-logo">
         <img
-          src="/cart-icon.png"
+          src="./cart-icon.png"
           alt=""
           style="width: 40px; height: 40px"
         />
@@ -36,7 +36,7 @@
       <h2 class="hh">Discover New Books</h2>
       <div class="content">
         <div class="book-1">
-          <img src="/book1.png" alt="" />
+          <img src="./book1.png" alt="" />
           <h2>This was our pact</h2>
           <h3>Ryan Andews</h3>
           <div class="buy">
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/book2.png" alt="" />
+          <img src="./book2.png" alt="" />
           <h2>The famous five</h2>
           <h3>Guid Blyton</h3>
           <div class="buy">
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/book3.png" alt="" />
+          <img src="./book3.png" alt="" />
           <h2>Matlida</h2>
           <h3>Roald Dahl</h3>
           <div class="buy">
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="book-1">
-          <img src="/book4.png" alt="" />
+          <img src="./book4.png" alt="" />
           <h2>Harry Potter</h2>
           <h3>JK Rowling</h3>
           <div class="buy">
